* CHANGES IN dplR VERSION 1.6.6

File: R/rasterPlot.R
----------------

- In rasterPlot(Cairo = TRUE, ...), added a version check for the Cairo
  package

File: DESCRIPTION
----------------

- Version requirement for stringi bumped up to >= 0.2-3. Should have been
  done for dplR 1.6.1

- Version requirement for matrixStats bumped up to >= 0.50.2
  because it's not possible to test 0.50.0, 0.50.1 with really old
  versions of R, e.g. 2.15.2.

- Version requirement for png bumped up to >= 0.1-2: difficulties
  compiling 0.1-1 on a test system (type voidp not defined).

Files: NAMESPACE, src/..., R/...
----------------

- Technical change: Native routines are registered.
  <https://stat.ethz.ch/pipermail/r-devel/2017-February/073755.html>

- Technical change: Visibility of native routines has been
  limited, following 6.15 "Controlling visibility" in R-exts.

File: sfrcs.R
----------------

- Added a detrending method, in function sfrcs(): Signal-Free
  Regional Curve Standardization (Melvin and Briffa, 2014).

File: rcs.R
----------------

- Technical changes to facilitate the implematation of sfrcs().

* CHANGES IN dplR VERSION 1.6.5

File: combine.rwl.R
----------------
-Changed so that combine.rwl returns class data.frame and class rwl.


File: crn.plot.R
----------------

- Graphical parameters (xlim, ylim, ...) are handled better in crn.plot().
- Parameter 'ylim2' controls scale of secondary y axis.

File: detrend and detrend.series.Rd
-----------------

- Added Friedman under method argument in the help file. It was ommitted by mistake. 
- Bug in detrend fixed where make.plot was hard coded as FALSE which kept TRUE 
  from being passed to detrend.series.

File: helpers.R
-----------------

- Added function find.internal.na() that reutrns the index of internal NA in a series. This will be used by the rwl.report() function and could be used (maybe) by the fill.internal.NA

File: rwl.report.R
-----------------
